--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@emotion/react": "11.1.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-spinners": "0.11.0-alpha.8"
+    "react-spinners": "0.11.0-beta.1"
   },
   "devDependencies": {
     "karma": "6.3.2",
