--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "dependencies": {
     "@emotion/core": "11.0.0",
     "@emotion/react": "11.4.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-spinners": "0.11.0-beta.1"
+    "react-spinners": "0.11.0"
   },
   "devDependencies": {
-    "karma": "6.3.2",
+    "karma": "6.3.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-cljs-test": "0.1.0",
     "karma-junit-reporter": "2.0.1",
-    "shadow-cljs": "2.12.5"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "shadow-cljs": "2.14.5"
   }
 }
